force-app/main/default/objects/OrderExtension__c/OrderExtension__c.object-meta.xml
<CustomObject>
    <label>Order Extension</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Order Extention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>