force-app/main/default/objects/OrderExtension__c/fields/EffectiveDate3__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate3__c</fullName>
    <label>Decorrenza 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>