force-app/main/default/objects/OrderExtension__c/fields/EffectiveDate4__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate4__c</fullName>
    <label>Decorrenza 4</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>